--- a/task7/uibook/resources/instance.properties
+++ b/task7/uibook/resources/instance.properties
@@ -1,4 +1,4 @@
-interfaces.IOnlainBook=controller.OnlineBook
+interfaces.IOnlineBook=controller.OnlineBook
 interfaces.IBook=model.Book
 interfaces.IOrder=model.Order
 interfaces.IBookDao=dao.BookDao
