--- a/task8/client/resources/instance.properties
+++ b/task8/client/resources/instance.properties
@@ -10,3 +10,4 @@ interfaces.ISeriazeble=controller.Seriazeble
 interfaces.IImportExport=controller.ImportExport
 interfaces.ISeriazeble=controller.Seriazeble
 interfaces.IImportExpor=controller.ImportExport
+com.senla.sobol.api.SupportClient=com.senla.sobol.api.SupportClient
