--- a/task11/onlinebook/resources/roat.properties
+++ b/task11/onlinebook/resources/roat.properties
@@ -2,14 +2,14 @@ dbexportimport=resources/export/file.csv
 url=jdbc:mysql://localhost:3306/mydb
 password=root
 username=root
-com.senla.sobol.model.IOnlineBook=controller.OnlineBook
-interfaces.IBookDao=dao.BookDao
-interfaces.IOrderDao=dao.OrderDao
-interfaces.ICustomerDao=dao.CustomerDao
-interfaces.IWriterDao=dao.WriterDao
-interfaces.IBookService=service.BookService
-interfaces.IOrderService=service.OrderService
-interfaces.IWriterService=service.WriterService
-interfaces.ICustomerService=service.CustomerService
-interfaces.IImportExport=controller.ImportExport
+com.senla.sobol.model.IOnlineBook=com.senla.sobol.controller.OnlineBook
+com.senla.sobol.dao.BookDao=com.senla.sobol.dao.BookDao
+com.senla.sobol.dao.OrderDao=com.senla.sobol.dao.OrderDao
+com.senla.sobol.dao.CustomerDao=com.senla.sobol.dao.CustomerDao
+com.senla.sobol.dao.WriterDao=com.senla.sobol.dao.WriterDao
+com.senla.sobol.interfaces.IBookService=com.senla.sobol.service.BookService
+com.senla.sobol.interfaces.IOrderService=com.senla.sobol.service.OrderService
+com.senla.sobol.interfaces.IWriterService=com.senla.sobol.service.WriterService
+com.senla.sobol.interfaces.ICustomerService=com.senla.sobol.service.CustomerService
+com.senla.sobol.interfaces.IImportExport=com.senla.sobol.controller.ImportExport
 com.senla.sobol.di.PropertyInstance=com.senla.sobol.di.PropertyInstance
