--- a/task11/onlinebook/bin/roat.properties
+++ b/task11/onlinebook/bin/roat.properties
@@ -1,6 +1,6 @@
 dbexportimport=resources/export/file.csv
 url=jdbc:mysql://localhost:3306/mydb
-password=sobol
+password=root
 username=root
 com.senla.sobol.model.IOnlineBook=com.senla.sobol.controller.OnlineBook
 com.senla.sobol.dao.BookDao=com.senla.sobol.dao.BookDao
