--- a/task12/.gitignore
+++ b/task12/.gitignore
@@ -1,3 +1,4 @@
+.metadata
 bin/
 lib/
 tmp/
@@ -18,3 +19,4 @@ Runner.java
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.target
