--- a/task12/.gitignore
+++ b/task12/.gitignore
@@ -1,11 +1,16 @@
-**/bin/
-**/lib/
-**/logs/
-**/target/
-**/.settings/
+.metadata
+bin/
+lib/
+tmp/
 *.tmp
 *.bak
 *.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+*.log
 *.class
 *.log
 *.properties
