AbstractEntity, обработка Exception in service, version dependency

--- a/task12/pom.xml
+++ b/task12/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>booksshop</groupId>
 	<artifactId>onlinebookshop</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${global.version}</version>
 	<packaging>pom</packaging>
 
 	<name>onlinebookshop</name>
@@ -13,6 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<global.version>0.1-SNAPSHOT</global.version>
 	</properties>
 
 	<dependencies>
