--- a/task16/pom.xml
+++ b/task16/pom.xml
@@ -35,5 +35,6 @@
 		<module>anotation</module>
 		<module>api</module>
     <module>webbookonline</module>
+    <module>front</module>
   </modules>
 </project>
